--- a/.github/workflows/main_testAndDeploy.yml
+++ b/.github/workflows/main_testAndDeploy.yml
@@ -15,11 +15,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
+          registry-url: 'https://registry.npmjs.org'
       - name: Install everything
         run: npm install
       - name: Run Unit tests
         run: npm test
       - name: Publish to NPM
-        run: npm publish
+        run: npm publish --access public
         env:
           token: ${{ secrets.NPM_TOKEN }}
